<?php
/**
 * 建造者模式
 */
namespace DesignPatterns\Creational\Builder;

use DesignPatterns\Creational\Builder\Parts\Vehicle;

interface BuilderInterface
{
	public function createVehicle();

	public function addWheel();

	public function addEngine();

	public function addDoors();

	public function getVehicle(): Vehicle;
}