<?php

namespace DesignPatterns\Creational\Builder;

use DesignPatterns\Creational\Builder\Parts\Vehicle;

class Director
{
	public function build(BuilderInterface $builder):Vehicle
	{
		$builder->createVehicle();
		$builder->addDoors();
		$builder->addEngine();
		$builder->addWheel();
		return $builder->getVehicle();
	}

}